examples/test/testpolicy4403.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4403
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key34: value13
      key14: value35
      key9: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value7
      podSelector:
        matchLabels:
          key40: value19
          key5: value35
